# d2spy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
api_client/: api_client.md  index.html
api_reference/: api_reference.md  index.html
auth/: auth.md  index.html
conferences/: index.html
d2spy/: __init__.py  api_client.py  auth.py  dataset.py  workspace.py
d2spy/extras/: geo.py  utils.py
d2spy/models/: __init__.py  data_product.py  data_product_collection.py  flight.py  flight_collection.py  geojson.py  job.py  location.py  project.py  project_collection.py  raw_data.py  user.py
d2spy/schemas/: __init__.py  data_product.py  flight.py  geojson.py  project.py  raw_data.py  session.py  stac_properties.py
d2spy/utils/: __init__.py  logging_config.py
data_product/: data_product.md  index.html
data_product_collection/: data_product_collection.md  index.html
docs/: CNAME  api_client.md  auth.md  guides.md  index.md  installation.md  workshops.md  workspace.md
docs/guides/notebooks/: 01_accessing_your_workspace.ipynb  01_creating_workspace_data.ipynb  02_accessing_your_workspace.ipynb  03_adding_multiple_data_products.ipynb  04_visualizing_data_products_with_leafmap.ipynb  05_visualizing_projects_with_leafmap.ipynb  06_clipping_rasters_with_d2spy.ipynb  07_3dep_search_by_d2s_projects.ipynb  08_3dep_search_by_polygon_and_clip_with_pdal.ipynb
docs/stylesheets/: extra.css
flight/: flight.md  index.html
flight_collection/: flight_collection.md  index.html
guides/: guides.md  index.html
guides/notebooks/01_creating_workspace_data/: 01_creating_workspace_data.ipynb  index.html
guides/notebooks/02_accessing_your_workspace/: 02_accessing_your_workspace.ipynb  index.html
guides/notebooks/03_adding_multiple_data_products/: 03_adding_multiple_data_products.ipynb  index.html
guides/notebooks/04_visualizing_data_products_with_leafmap/: 04_visualizing_data_products_with_leafmap.ipynb  index.html
guides/notebooks/05_visualizing_projects_with_leafmap/: 05_visualizing_projects_with_leafmap.ipynb  index.html
guides/notebooks/06_clipping_rasters_with_d2spy/: 06_clipping_rasters_with_d2spy.ipynb  index.html
guides/notebooks/07_3dep_search_by_d2s_projects/: 07_3dep_search_by_d2s_projects.ipynb  index.html
guides/notebooks/08_3dep_search_by_polygon_and_clip_with_pdal/: 08_3dep_search_by_polygon_and_clip_with_pdal.ipynb  index.html
guides/notebooks/09_naip_search_by_d2s_projects_and_clip/: 09_naip_search_by_d2s_projects_and_clip.ipynb  index.html
installation/: index.html
license/: index.html  license.md
project/: index.html  project.md
project_collection/: index.html  project_collection.md
search/: search_index.json
tests/: example_data.py  test_api_client.py  test_auth.py  test_data_product.py  test_data_product_collection.py  test_flight.py  test_flight_collection.py  test_project.py  test_project_collection.py  test_utils.py  test_workspace.py
tests/data/: dsm.tif  feature_in_dsm.geojson  feature_outside_dsm.geojson
tutorial/: README.md  d2s_geoai_tutorial_01.ipynb
welcome/: index.html
workshops/: index.html
workspace/: index.html  workspace.md
