[tool.poetry]
name = "d2spy"
version = "0.0.10"
license = "MIT License"
description = "Python package for interacting with a Data to Science instance."
authors = ["Ben Hancock <hancocb@purdue.edu>"]
readme = "README.md"
keywords = ["python", "data to science", "uas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "d2spy"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
mkdocs-material = "^9.5.11"
mkdocs-jupyter = "^0.24.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
